<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/tv_login_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="60dp"
        android:text="@string/login_title_welcome"
        android:textColor="@android:color/black"
        android:textSize="22sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="10dp"
        android:text="@string/login_title_des"
        android:textColor="@color/business_im_555"
        android:textSize="15sp" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_login_uid_list"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:layout_marginTop="40dp" />

    <LinearLayout
        android:id="@+id/agree"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/agree_check"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:src="@drawable/icon_im_radio_unchecked"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tv_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:text="@string/login_agree_des" />
    </LinearLayout>

    <FrameLayout
        android:id="@+id/login_btn"
        android:layout_marginTop="16dp"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/shape_im_conversation_msg_send_bg">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/login_text"
            android:textSize="22sp" />
    </FrameLayout>
</LinearLayout>