<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/action_bar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize">

        <ImageView
            android:id="@+id/iv_back"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="start|center_vertical"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:src="@drawable/icon_im_back_black" />

        <TextView
            android:id="@+id/message_list_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="聊天详情"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxEms="10"
            android:textColor="@color/business_im_222"
            android:textSize="18sp"
            android:textStyle="bold" />
    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/business_base_white">

        <android.support.v7.widget.RecyclerView
            android:id="@+id/recycler_view_member"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="6dp"
            android:paddingLeft="8dp" />

        <ImageView
            android:id="@+id/iv_goto_member"
            android:layout_width="39dp"
            android:layout_height="35dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:src="@drawable/icon_im_goto" />
    </RelativeLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_conversation_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:id="@+id/group_name_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/im_conversation_detail_group_name"
            android:maxLines="1"
            android:ellipsize="end"
            android:textColor="@color/business_im_222"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_conversation_group_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp"
            android:text="未命名群聊"
            android:textColor="@color/business_im_999"
            android:textSize="14sp"
            android:maxLines="1"
            android:ellipsize="end"
            android:maxEms="10"
            app:layout_constrainedWidth="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/iv_conversation_name"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_conversation_name"
            android:layout_width="9dp"
            android:layout_height="18dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_im_goto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_conversation_notice"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/im_conversation_detail_group_notice"
            android:textColor="@color/business_im_222"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_conversation_group_notice_null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="9dp"
            android:maxLines="1"
            android:ellipsize="end"
            android:text="未设定"
            android:maxEms="10"
            android:textColor="@color/business_im_999"
            android:textSize="14sp"
            android:visibility="visible"
            app:layout_constraintEnd_toStartOf="@id/iv_conversation_notice"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_conversation_group_notice"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLines="3"
            android:textColor="@color/business_im_999"
            android:textSize="14sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/iv_conversation_notice" />

        <ImageView
            android:id="@+id/iv_conversation_notice"
            android:layout_width="9dp"
            android:layout_height="18dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_im_goto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_conversation_master_manage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/im_conversation_group_set_manager"
            android:textColor="@color/business_im_222"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_conversation_master_manage"
            android:layout_width="9dp"
            android:layout_height="18dp"
            android:layout_marginLeft="9dp"
            android:src="@drawable/icon_im_goto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/im_conversation_detail_top"
            android:textColor="@color/business_im_222"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:thumb="@drawable/switch_custom_thumb_selector"
            android:track="@drawable/switch_custom_track_selector" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/im_conversation_detail_mute"
            android:textColor="@color/business_im_222"
            android:textSize="16sp" />

        <Switch
            android:id="@+id/switch_mute"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:thumb="@drawable/switch_custom_thumb_selector"
            android:track="@drawable/switch_custom_track_selector" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_dissolve_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:id="@+id/dissolve_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="解散群聊"
            android:textColor="@color/business_im_222"
            android:textSize="16sp" />
    </FrameLayout>

    <FrameLayout
        android:id="@+id/fl_quit_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:background="@color/business_base_white"
        android:padding="16dp">

        <TextView
            android:id="@+id/quit_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="退出群聊"
            android:textColor="@color/business_im_222"
            android:textSize="16sp" />
    </FrameLayout>
</LinearLayout>